--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1{
   font-family: 'poppins', Arial, serif;
   padding-bottom: 15px;
   padding-top: 15px;
+  width: 500px; 
 }
 
 .title_box{
@@ -26,9 +27,9 @@ h1{
 
 .pantone_table {
   padding: 10px;
-  width: max;
   font-family: 'poppins', Arial, serif;
   background-image: linear-gradient(to bottom left, #0F4C81, #92A8D1);
+  width: 500px;
 }
 
 td:nth-child(even){
