--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 
 head {
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/49/Georges_de_La_Tour_-_The_Cheat_with_the_Ace_of_Clubs_-_Google_Art_Project.jpg");
+  background-size: cover; 
+  max-height: 500px;
 }
 
 body {
