--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ h1{
   padding-top: 15px;
 }
 
+h2{
+  text-align: center;
+  font-size: 18px;
+  font-family: 'poppins', Arial, serif;
+  padding-top: 8px;
+}
+
 p{
   text-align: center;
   font-family: 'poppins', Aria, serif;
