--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p {
   font-weight: bold;
 }
 
-.pantone_table {
+#pantone_table {
   padding: 10px;
   font-family: 'poppins', Arial, serif;
   background-image: linear-gradient(to bottom left, #0F4C81, #92A8D1);
